Fix z-indexing of daypicker

--- a/src/main.sass
+++ b/src/main.sass
@@ -70,6 +70,7 @@ $input-height: 36px - $spacing - ($border-width * 2)
 
 .objectlist-input__daypicker
   position: absolute
+  z-index: 10
   top: $input-height + $spacing * 2 + $border-width
   right: 0
   border: $border
